# MCP-Demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: .env  .env.example  claude_desktop_config.json  cursor_config.md
docs/: MCP-SERVER-GUIDE.md
src/: server.py
src/mcp_universal_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
