[project]
name = "mcp-universal-server"
version = "1.0.0"
description = "Universal MCP Server with GitHub, Databases, Filesystem, and Custom API support"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pymysql>=1.1.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pygithub>=2.2.0",
    "aiofiles>=23.2.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
